# motionDetected

./: CMakeLists.txt  CMakeUserPresets.json  command.txt  conanfile.txt  readme.md  toolchain.cmake
src/: main.c
